syntax = "proto3";

option java_multiple_files =  true;

package com.epam.training.backend_services.grpc;

message Greeting {
  string phrase = 1;
  string action = 2;
}

message GreetingRequest {
  Greeting greeting = 1;
}

message GreetingReply {
  string phrase = 1;
  string info = 2;
}

message GreetingReplyManyTimes {
  string phrase = 1;
  string info = 2;
}

service HandshakeService {

  // Unary
  rpc handshake(GreetingRequest) returns (GreetingReply);

  // Streaming server
  rpc handshakeManyTimes(GreetingRequest) returns (stream GreetingReplyManyTimes);

}